--- a/pages/index.html
+++ b/pages/index.html
@@ -98,7 +98,6 @@
             Contact
             <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-[#333024] transition-all duration-300 group-hover:w-full"></span>
           </a></li>
-          <li><a href="login.html" class="bg-[#504B38] text-[#F8F3D9] px-4 py-2 rounded-lg hover:bg-[#333024] transition-colors duration-300">Login</a></li>
         </ul>
       </div>
     </nav>
@@ -131,7 +130,7 @@
           </p>
       
           <div class="flex justify-center gap-6 mt-8">
-            <a href="login.html" class="bg-[#504B38] text-[#F8F3D9] px-8 py-4 rounded-xl font-semibold shadow-lg hover:bg-[#333024] transform hover:scale-105 transition-all duration-300">
+            <a href="dashboard.html" class="bg-[#504B38] text-[#F8F3D9] px-8 py-4 rounded-xl font-semibold shadow-lg hover:bg-[#333024] transform hover:scale-105 transition-all duration-300">
               Get Started
             </a>
             <a href="#about" class="bg-[#B9B28A] text-[#504B38] px-8 py-4 rounded-xl font-semibold shadow-lg hover:bg-[#504B38] hover:text-[#F8F3D9] transform hover:scale-105 transition-all duration-300">
