--- a/pages/stocks.html
+++ b/pages/stocks.html
@@ -182,7 +182,7 @@
         <li><a href="stocks.html" class="hover:text-[#333024] transition-colors duration-300 relative group">Stocks</a></li>
         <li><a href="watchlist.html"class="hover:text-[#333024] transition-colors duration-300 relative group">Watchlist</a></li>
         <li><a href="holdings.html" class="hover:text-[#333024] transition-colors duration-300 relative group">Holdings</a></li>
-        <li><a href="chat.html" class="hover:text-[#333024] transition-colors duration-300 relative group">Learn More</a></li>
+        <li><a href="chat.html" class="hover:text-[#333024] transition-colors duration-300 relative group">Finn</a></li>
         <li><a href="login.html" class="bg-[#504B38] text-[#F8F3D9] px-4 py-2 rounded-lg hover:bg-[#333024] transition-colors duration-300">Log Out</a></li>
      
       </ul>
